...
      "comment" : "A button label that pauses a background voice memo transcription.",
      "isCommentAutoGenerated" : true
    },
    "下のボタンで新しい録音を開始してください" : {

    },
    "保存" : {

    },
    "保存完了" : {

    },
    "停止" : {
...
      "comment" : "A button label that says \"Start transcription\".",
      "isCommentAutoGenerated" : true
    },
    "文字起こし実行" : {

    },
    "文字起こし結果" : {

    },
    "文字起こし結果がありません" : {

    },
    "文字起こし結果が更新されました。" : {
...
            "state" : "translated",
            "value" : "適用"
          }
        }
      }
    },
    "録音" : {

    },
    "録音を開始してください" : {

    },
    "録音中..." : {
...
        }
      }
    },
    "音声認識設定" : {

    },
    "音声録音" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Voice Recording"
          }
...
